--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "igeServer",
 	"version": "1.1.1",
-	"author":"Irrelon Software Limited <isogenic@irrelon.com>",
-	"description":"The Isogenic Engine game server application.",
+	"author": "Irrelon Software Limited <isogenic@irrelon.com>",
+	"description": "The Isogenic Engine game server application.",
 	"contributors": [
 		{
 			"name": "Rob Evans",
@@ -12,11 +12,11 @@
 	"private": true,
 	"dependencies": {
 		"easyimage": "0.1.3",
-		"mongodb": "1.0.2",
+		"mongodb": "2.2.19",
 		"mysql": "2.0.0-alpha3",
 		"node-arguments": "0.0.1",
 		"socket.io": "0.9.14",
-		"uglify-js2": "2.1.4",
+		"uglify-js": "2.2.0",
 		"net.io-server": "https://github.com/coolbloke1324/net.io-server/tarball/master"
 	},
 	"engines": {
